[gd_scene load_steps=6 format=3 uid="uid://cd4t4iidtkdlk"]

[ext_resource type="Script" path="res://script/hud.gd" id="1_0cow5"]
[ext_resource type="FontFile" uid="uid://o2ddtj8ytn4r" path="res://fonts/cormorant/Cormorant-Bold.ttf" id="1_c04g8"]
[ext_resource type="Texture2D" uid="uid://b3ghrj3c4raev" path="res://assets/sprites/skull.png" id="3_8xfc3"]
[ext_resource type="FontFile" uid="uid://bhxhnidr4wmtg" path="res://fonts/cormorant/Cormorant-Regular.ttf" id="3_uj8cu"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wda6y"]
bg_color = Color(0.215686, 0.435294, 0.784314, 1)

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_0cow5")

[node name="TOP" type="VBoxContainer" parent="."]
anchors_preset = 10
anchor_right = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = 54.0
alignment = 1

[node name="XP" type="HBoxContainer" parent="TOP"]
layout_mode = 2
alignment = 1

[node name="Level_Label" type="RichTextLabel" parent="TOP/XP"]
custom_minimum_size = Vector2(100, 40)
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/bold_font = ExtResource("1_c04g8")
theme_override_font_sizes/bold_font_size = 30
bbcode_enabled = true
text = "[b] LVL : [/b]"

[node name="XP_BAR" type="ProgressBar" parent="TOP/XP"]
clip_contents = true
custom_minimum_size = Vector2(500, 40)
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/fill = SubResource("StyleBoxFlat_wda6y")
step = 1.0
rounded = true
show_percentage = false

[node name="XP_Numbers" type="RichTextLabel" parent="TOP/XP/XP_BAR"]
custom_minimum_size = Vector2(150, 40)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/bold_font = ExtResource("1_c04g8")
theme_override_font_sizes/bold_font_size = 30
bbcode_enabled = true
metadata/_edit_use_anchors_ = true

[node name="MainHud" type="HBoxContainer" parent="TOP"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="Weapons" type="GridContainer" parent="TOP/MainHud"]
custom_minimum_size = Vector2(200, 40)
layout_mode = 2
size_flags_horizontal = 3

[node name="Slot1" type="TextureRect" parent="TOP/MainHud/Weapons"]
layout_mode = 2

[node name="Slot2" type="TextureRect" parent="TOP/MainHud/Weapons"]
layout_mode = 2

[node name="Slot3" type="TextureRect" parent="TOP/MainHud/Weapons"]
layout_mode = 2

[node name="Slot4" type="TextureRect" parent="TOP/MainHud/Weapons"]
layout_mode = 2

[node name="Slot5" type="TextureRect" parent="TOP/MainHud/Weapons"]
layout_mode = 2

[node name="GameTimer" type="RichTextLabel" parent="TOP/MainHud"]
custom_minimum_size = Vector2(100, 40)
layout_mode = 2
size_flags_horizontal = 6
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/bold_font = ExtResource("1_c04g8")
theme_override_font_sizes/bold_font_size = 35
bbcode_enabled = true

[node name="Stats" type="VBoxContainer" parent="TOP/MainHud"]
custom_minimum_size = Vector2(150, 40)
layout_mode = 2
size_flags_horizontal = 3

[node name="Kills" type="HBoxContainer" parent="TOP/MainHud/Stats"]
custom_minimum_size = Vector2(200, 20)
layout_mode = 2
size_flags_horizontal = 8

[node name="Kills_pic" type="TextureRect" parent="TOP/MainHud/Stats/Kills"]
clip_contents = true
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
texture = ExtResource("3_8xfc3")
expand_mode = 2
stretch_mode = 5

[node name="Kills_Label" type="RichTextLabel" parent="TOP/MainHud/Stats/Kills"]
custom_minimum_size = Vector2(150, 25)
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("3_uj8cu")
theme_override_font_sizes/normal_font_size = 20

[node name="Money" type="HBoxContainer" parent="TOP/MainHud/Stats"]
custom_minimum_size = Vector2(200, 20)
layout_mode = 2
size_flags_horizontal = 8

[node name="Money_pic" type="TextureRect" parent="TOP/MainHud/Stats/Money"]
clip_contents = true
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
texture = ExtResource("3_8xfc3")
expand_mode = 2
stretch_mode = 5

[node name="Money_Label" type="RichTextLabel" parent="TOP/MainHud/Stats/Money"]
custom_minimum_size = Vector2(150, 25)
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("3_uj8cu")
theme_override_font_sizes/normal_font_size = 20
